bk_ida/gccida/g0/replace_oldest_value_mem
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/replace_oldest_value_mem/src/regrename.c:1977:67: error: use of undeclared identifier 'machine_mode'
return replace_oldest_value_addr( ( rtx *)x->fld, GENERAL_REGS, ( machine_mode)*( ( unsigned __int8 *)x + 2), insn, vd); 
                                                                  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/replace_oldest_value_mem/src/obj/regrename.o] Error 1
